added forgot pass fun
